<resources>
    <string name="app_name">ArithmeticForKids</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="arithmetic_for_kids">Arithmetic Practice!</string>
    <string name="what_would_you_like_to_practice_today">What would you like to practice today?</string>
    <string name="go_back">Go back</string>
    <string name="go">Go</string>
    <string name="goSubtraction">Go</string>
    <string name="division">Division</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginButton">Login</string>
    <string name="admin_tools">Admin Tools</string>
    <string name="title_activity_admin_tools">AdminToolsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="admin_tools_name">Admin Tools</string>
    <string name="display_data">Display Data</string>
    <string name="no_users_message">No users found.</string>
    <string name="press_the_button_to_load">Press the button to load</string>
    <string name="add_user">Add User</string>
    <string name="add_admin">Add Admin</string>
    <string name="clear_cache">Clear Cache</string>
</resources>