<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/displayAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/arithmetic_for_kids"
        android:textColor="@color/superPurple"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionForUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/what_would_you_like_to_practice_today"
        android:textColor="@color/superPurple"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/additionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayAppName"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/additionButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/addition"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionForUser" />

    <Button
        android:id="@+id/subtractionButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:text="@string/subtraction"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionButton" />

    <Button
        android:id="@+id/multiplicationButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:text="@string/multiplication"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtractionButton" />

    <Button
        android:id="@+id/divisionButton"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:text="@string/division"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplicationButton" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="230dp"
        android:layout_height="135dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/questionForUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayAppName"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>