<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMainActivity">

    <TextView
        android:id="@+id/AdminDisplayAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/arithmetic_for_kids"
        android:textColor="@color/superPurple"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AdminQuestionForUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="175dp"
        android:text="@string/what_would_you_like_to_practice_today"
        android:textColor="@color/superPurple"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/AdminAdditionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminDisplayAppName"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/AdminAdditionButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/addition"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminQuestionForUser"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/AdminSubtractionButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/subtraction"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminAdditionButton"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/AdminMultiplicationButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/multiplication"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminSubtractionButton"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/AdminDivisionButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/division"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminMultiplicationButton"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/AdminTools"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/admin_tools"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminDivisionButton"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="230dp"
        android:layout_height="135dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/AdminQuestionForUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminDisplayAppName"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>