<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminTools">

    <TextView
        android:id="@+id/AdminToolsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/admin_tools_name"
        android:textColor="@color/superPurple"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/UserListScroll"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdminToolsName"
        android:background="@drawable/custom_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:padding="8dp">

        <TextView
            android:id="@+id/UserListDisplayWindow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/press_the_button_to_load"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </ScrollView>

    <Button
        android:id="@+id/ShowUsersButtonAdminTools"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/display_data"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserListScroll"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/AddUserButtonAdminTools"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/add_user"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/ShowUsersButtonAdminTools"
        />

    <Button
        android:id="@+id/AddAdminButtonAdminTools"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/add_admin"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/AddUserButtonAdminTools"
        />

    <Button
        android:id="@+id/ClearCacheButtonAdminTools"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/clear_cache"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/AddAdminButtonAdminTools"
        />

    <Button
        android:id="@+id/goBackButtonAdminTools"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/go_back"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/purple"
        android:textColor="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>